# openai_gym_ros

csv/: plot.py  rl.csv
openai_ros/openai_ros/: CMakeLists.txt
training/red_training/: CMakeLists.txt  package.xml
training/red_training/config/: red_madoana_params.yaml
training/red_training/launch/: start_training_red_madoana.launch  start_training_red_madoana_DQN.launch  start_training_red_madoana_SOM.launch
training/red_training/scripts/: agent.py  liveplot.py  qlearn.py  som.py  super_core.py  training_red.py  training_red_DQN.py  training_red_SOM.py
training/red_training_dqn/: CMakeLists.txt  package.xml
training/red_training_dqn/launch/: start_training_red_madoana_dqn.launch
training/red_training_dqn/scripts/: callbacks.py  core.py  som.py  super_core.py  training_red_DQN.py  training_red_dqn.py
training/red_training_pend/: CMakeLists.txt  package.xml
training/red_training_pend/config/: red_madoana_params.yaml
training/red_training_pend/launch/: pend.launch
training/red_training_pend/scripts/: dqn_agent.py  dqn_agent_cpu.py  gtm.py  training_red_pend.py
training/red_training_som/: CMakeLists.txt  package.xml
training/red_training_som/config/: red_madoana_params.yaml
training/red_training_som/launch/: pend.launch  som.launch
training/red_training_som/scripts/: som.py  training_red_SOM.py  training_red_som.py
training/turtlebot2_training/config/: red_madoana_params.yaml
training/turtlebot2_training/launch/: start_training_red_madoana.launch
training/turtlebot2_training/scripts/: qlearn.py  start_training.py  training_red.py
(+18 files in other folders)
